--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   badges: ^2.0.2
   cupertino_icons: ^1.0.2
+  flare_flutter: ^3.0.2
   flutter:
     sdk: flutter
   get: ^4.6.1
@@ -52,6 +53,7 @@ flutter:
   assets:
     - assets/images/svg/
     - assets/images/png/
+    - assets/flare/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
